# BASE_STATION

./: .gitignore  docker-compose.yml
antenaTracker/: antinaTracker.py  test.py
mediamtx/: mediamtx.yml
rtk/: redis_client.py  send_rtcm_drone.py
sender/: main.py  pyproject.toml
telem/: .env  .index.js.swo  .rabit.swp  .socket_client.js.swp  Dockerfile  base_relay.service  base_relay.sh  index.js  messageHandler.js  package-lock.json  package.json  rabbitmq.js  rabbitmq.js.save  rabbitmq.js.save.1  rabbitmq.js.save.2  recvtelem.py  redis.js  rest_server.js  rssi.js  socket_client.js
telem/rabbitmqBase/: client.js  consumer.js  emitter.js  producer.js
telem/rabbitmqClient/: client.js  consumer.js  producer.js
telemforwarder/: package-lock.json  package.json
telemforwarder/src/: Telem.proto  Telem.ts  compilets.sh  getRssi.py  index.ts  rssi.txt
